# reading-log

./: com.github.andersonjwan.ReadingLog.json  meson.build
data/: com.github.andersonjwan.ReadingLog.appdata.xml.in  com.github.andersonjwan.ReadingLog.desktop.in  com.github.andersonjwan.ReadingLog.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  reading_log-window.c  reading_log-window.h  reading_log-window.ui  reading_log.gresource.xml
src/ui/: add-book.ui  main.gresource.xml  main.ui
